admin panel doc

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                             <!-- submenu list -->
                             <li class='sub-menu'><a >Setup admin panel<i class='fa fa-caret-down right'></i></a>
                                 <ul>
-                                    <li><a href='#Account'>Account</a></li>
-                                    <li><a href='#settings'>Profile</a></li>
+                                    <li><a href='#prerequisite'>Prerequisite</a></li>
+                                    <li><a href='#Installation-steps'>Installation Steps</a></li>
 
                                 </ul>
                             </li>
@@ -117,42 +117,39 @@
                 </section>
 
                 <!--Admin panel-->
-                <section class="section html-structure" id="html-structure">
+                <section class="section html-structure" id="prerequisite">
                     <div class="sec-title">
                         <span class="icon fa fa-th-large"></span>
-                        <h2>HTML Structure</h2>
+                        <h2>Setup Admin Panel</h2>
                     </div>
 
                     <br />
                     <div class="sec-content">
+                        <h3 class="content-title">Prerequisite</h3>
                         <h3>
-                            The html template uses Latest <strong>Bootstrap v4.5</strong> with valid HTML5 tags. This theme is a responisve layout with 4 column Support column. All of the information in content area is nested within a class
-                            and comes with predefined classes.
+                            Eschool Admin panel is built using <strong>Laravel Framework 9.14.1</strong> so you need <strong>PHP 8.0 or higher</strong> version installed on your server.
                         </h3>
 
-                        <h3 class="content-title">Basic Grid HTML</h3>
-                        <p>
-                            For a simple two column layout, create a .container and add the appropriate number of .col-lg* columns.
-                        </p>
-                        <p>
-                            Given this example, we have .col-md-4 and .col-md-8, making for 12 total columns and a complete row.
-                        </p>
+                        <h3 class="content-title">Upload Admin Panel code on server</h3>
+                        <p>1. Unzip the code you will see the <strong>Admin Panel</strong> inside the zip.</p>
+                        <p>2. Upload this folder content on your server in <strong>public_html</strong> folder.</p>
+                        <p>3. After uploading visit your domain url. You will see the installation wizard.Follow the instructions.</p>
                         <br />
-                        <pre class="code" data-language="html">
+                        <!-- <pre class="code" data-language="html">
                             <div class="container">
                                 <div class="col-md-4">...</div>
                                 <div class="col-md-8">...</div>
                             </div>
                         </pre>
-                        <br />
-                        <h3 class="content-title">Nesting Columns</h3>
-                        <!-- /.content-title -->
+                        <br /> -->
+                        <!-- <h3 class="content-title">Nesting Columns</h3>
+                    
                         <p>
                             To nest your content with the default grid, add a new .container and set of .col-md* columns within an existing .col-md* column. Nested rows should include a set of columns that add up to the number of columns of
                             its parent.
-                        </p>
+                        </p> -->
                         <br />
-                        <pre class="code" data-language="html">
+                        <!-- <pre class="code" data-language="html">
                             <div class="container">
                                 <div class="col-md-9">
                                     Level 1 column
@@ -166,20 +163,40 @@
                                     Level 2 column
                                 </div>
                             </div>
-                        </pre>
+                        </pre> -->
                         <!-- /.code -->
                     </div>
                 </section>
 
-                <section class="section css-structure" id="Account">
+                <section class="section css-structure" id="Installation-steps">
                     <div class="sec-title">
                         <span class="icon fa fa-at"></span>
-                        <h2>Account</h2>
+                        <h2>Installation Steps</h2>
                     </div>
 
                     <br />
                     <div class="sec-content">
-                        <h3>
+                        <h3 class="content-title">1. Installation Screen</h3>
+                        <img src="images/admin/1.png" alt="e-School">
+
+                        <h3 class="content-title">2. Server Requirements & Extensions</h3>
+                        <h3>If PHP version is lower than 8.0 or any extension is not installed then it will be highlighted using Red color. So you need to make sure that your server meets the all requirement.</h3>
+                        <img src="images/admin/2.png" alt="e-School">
+
+                        <h3 class="content-title">3. Permission Screen</h3>
+                        <h3>Make sure this folder have read & write permissions. If not then assign this folders read & write permissions.</h3>
+                        <img src="images/admin/3.png" alt="e-School">
+
+                        <h3 class="content-title">4. Database Configuration Screen</h3>
+                        <img src="images/admin/4.png" alt="e-School">
+
+                        <h3 class="content-title">5. Database Connection Status</h3>
+                        <img src="images/admin/5.png" alt="e-School">
+
+                        <h3 class="content-title">6. Final installation Screen</h3>
+                        <h3>If everything is configured successfully then your Admin panel has been installed successfully.You can login as Super Admin using the credentials provided here.</h3>
+                        <img src="images/admin/6.png" alt="e-School">
+                        <!-- <h3>
                             Mainly three main CSS files are used in this theme. The first one
                             <strong>bootstrap.min.css</strong>, second one is <strong>style.css</strong> which for this template and to control responsive layouts.
                         </h3>
@@ -188,7 +205,7 @@
                         </p>
                         <br />
                         <p>These are the css files that are loaded into templates in top of style.css file labled as <b>default css</b>.</p>
-                        <br />
+                        <br /> -->
 
 
                     </div>
