--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
             <div id="content-section">
                 <!--Introduction Section-->
                 <section class="section introduction" id="introduction">
-                    <!-- <div class="sec-title">
-                            <span class="icon fa fa-windows"></span>
-                            <h2>Intoduction</h2>
-                        </div> -->
+                   
 
                     <br />
                     <div class="sec-content">
@@ -102,14 +99,14 @@
 
                         <div class="separator"></div>
 
-                        <strong>Created :</strong> 07/06/2022<br />
+                        
                         <strong>By :</strong> WRTeam<br />
                         <strong>Email :</strong>
-                        <a href="mailto:support@wrteam.in ">support@wrteam.in</a> <br />
+                        <a href="mailto:wrteam.priyansh@gmail.com ">wrteam.priyansh@gmail.com</a> <br />
 
                         <br />
                         <p>
-                            Thank you for purchasing <strong>WRTeam </strong> - App Documentation Landing Html Teemplate. If you have any questions that are beyond the scope of this help file, please feel free to email<br />
+                            Thank you for purchasing.<strong>e-School</strong> - Follow this documentation to setup admin panel and mobile application. <br />
                             Thank you so much!
                         </p>
                         <br />
