additional configurations admin panel

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <ul>
                                     <li><a href='#prerequisite'>Prerequisite</a></li>
                                     <li><a href='#Installation-steps'>Installation Steps</a></li>
-
+                                    <li><a href='#additional-configurations'>Addtional Configuration</a></li>
                                 </ul>
                             </li>
 
@@ -135,36 +135,7 @@
                         <p>2. Upload this folder content on your server in <strong>public_html</strong> folder.</p>
                         <p>3. After uploading visit your domain url. You will see the installation wizard.Follow the instructions.</p>
                         <br />
-                        <!-- <pre class="code" data-language="html">
-                            <div class="container">
-                                <div class="col-md-4">...</div>
-                                <div class="col-md-8">...</div>
-                            </div>
-                        </pre>
-                        <br /> -->
-                        <!-- <h3 class="content-title">Nesting Columns</h3>
-                    
-                        <p>
-                            To nest your content with the default grid, add a new .container and set of .col-md* columns within an existing .col-md* column. Nested rows should include a set of columns that add up to the number of columns of
-                            its parent.
-                        </p> -->
                         <br />
-                        <!-- <pre class="code" data-language="html">
-                            <div class="container">
-                                <div class="col-md-9">
-                                    Level 1 column
-                                    <div class="row">
-                                        <div class="col-md-8">Level 2</div>
-                                        <div class="col-md-4">Level 2</div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-3">
-                                    Level 2 column
-                                </div>
-                            </div>
-                        </pre> -->
-                        <!-- /.code -->
                     </div>
                 </section>
 
@@ -196,18 +167,38 @@
                         <h3 class="content-title">6. Final installation Screen</h3>
                         <h3>If everything is configured successfully then your Admin panel has been installed successfully.You can login as Super Admin using the credentials provided here.</h3>
                         <img src="images/admin/6.png" alt="e-School">
-                        <!-- <h3>
-                            Mainly three main CSS files are used in this theme. The first one
-                            <strong>bootstrap.min.css</strong>, second one is <strong>style.css</strong> which for this template and to control responsive layouts.
-                        </h3>
-                        <p>
-                            If you would like to edit a specific section of the site, simply find the appropriate label in the CSS file, and then scroll down until you find the appropriate style that needs to be edited.
-                        </p>
-                        <br />
-                        <p>These are the css files that are loaded into templates in top of style.css file labled as <b>default css</b>.</p>
-                        <br /> -->
+                    </div>
+                </section>
 
+                <section class="section css-structure" id="additional-configurations">
+                    <div class="sec-title">
+                        <span class="icon fa fa-at"></span>
+                        <h2>Addtional Configurations (Admin Panel)</h2>
+                    </div>
 
+                    <br />
+                    <div class="sec-content">
+                        <h3>After Installation you need to setup some settings before using the system.</h3>
+
+                        <h3 class="content-title">1. Session Year</h3>
+                        <h3>Set your Current & upcoming session years here, So you can manage studens by session year</h3>
+                        <img src="images/admin/7.png" alt="e-School">
+
+                        <h3 class="content-title">2. App Settings</h3>
+                        <h3>This settings will be used by your Flutter APP.</h3>
+                        <img src="images/admin/8.png" alt="e-School">
+
+                        <h3 class="content-title">3. General Settings</h3>
+                        <h3>This settings will be used by Admin Panel.You can set your current session year here.</h3>
+                        <img src="images/admin/9.png" alt="e-School">
+
+                        <h3 class="content-title">4. FCM Server Key</h3>
+                        <h3>FCM Server key will be used for APP notifications.</h3>
+                        <img src="images/admin/10.png" alt="e-School">
+
+                        <h3 class="content-title">5. Email Configurations</h3>
+                        <h3>Send Email configurations so that system can send emails to registered users.</h3>
+                        <img src="images/admin/11.png" alt="e-School">
                     </div>
                 </section>
 
