updated release version title

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 <section class="section css-structure" id="generateReleaseVersion">
                     <div class="sec-title">
                         <span class="icon fa fa-at"></span>
-                        <h2>Change language in app</h2>
+                        <h2>Generate release version</h2>
                         <br>
                     </div>
                     
