--- a/index.html
+++ b/index.html
@@ -348,28 +348,6 @@
 
 
 
-            <section class="section css-structure" id="generateReleaseVersion">
-                <div class="sec-title">
-                    <span class="icon fa fa-at"></span>
-                    <h2>Generate release version</h2>
-                    <br>
-                </div>
-
-                <div class="sec-content">
-                    <h4>How to generate release version of this product</h4>
-                    <ol>
-                        <li>
-
-                            <h4>To generate release android app-bundle and publish to playstore follow
-                                https://flutter.dev/docs/deployment/android</h4>
-                        </li>
-                        <li>
-                            <h4>To generate release ios apk and publish to appstore follow
-                                https://flutter.dev/docs/deployment/ios</h4>
-                        </li>
-                    </ol>
-                </div>
-            </section>
 
 
 
@@ -402,7 +380,7 @@
 
                 <div class="sec-content">
                     <h4>
-                        Go to lib/utils/constants.dart and replace the database url with your admin panel url.
+                        Go to lib/utils/constants.dart and replace the baseUrl with your admin panel url.
                     </h4>
                     <img src="images/app/changeDatabaseUrl.png" alt="e-School" /><br>
                     <br />
