added disable demo version instructions

--- a/index.html
+++ b/index.html
@@ -439,7 +439,13 @@
 
                 <div class="sec-content">
 
-                    <h4>Now we have setiup all the necessary things it's time to run this app.</h4>
+                    <h4>Go to lib/utils/uiUtils.dart and return false for isDemoVersionEnable() function.</h4>
+                    <br>
+                    <img src="images/app/disableDemo.png" alt="e-School" />
+                    <br>
+
+
+                    <h4>Now we have setup all the necessary things it's time to run this app.</h4>
                     <br>
                     <h4>Open your terminal, navigate to your project path and execute the following command to run this
                         app</h4>
