Added fees module related instructions

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
                     <h3 class="content-title">5. Email Configurations</h3>
                     <h3>Send Email configurations so that system can send emails to registered users.</h3>
                     <img src="images/admin/11.png" alt="e-School">
+
+                    <h3 class="content-title">6. Fee payment Configurations</h3>
+                    <h3>Set razorpay and stripe credentials. At a time only one payment gateway will be enable</h3>
+                    <img src="images/admin/12.png" alt="e-School">
                 </div>
             </section>
 
