--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                             <a href="#support">Support <span class="fa fa-arrow-right"></span></a>
                         </li>
                         <li>
+                            <a href="#faqs">FAQs <span class="fa fa-arrow-right"></span></a>
+                        </li>
+                        <li>
                             <a href="#rating">Rating <span class="fa fa-arrow-right"></span></a>
                         </li>
                         <li>
@@ -358,7 +361,7 @@
 
 
             <!--Support-->
-            <section class="section support" id="support">
+            <!-- <section class="section support" id="support">
                 <div class="sec-title">
                     <span class="icon fa fa-support"></span>
                     <h2>Support</h2>
@@ -370,7 +373,7 @@
                     </ol>
                     <br />
                 </div>
-            </section>
+            </section> -->
 
 
             <!-- Change package name of this app flutter  -->
@@ -594,6 +597,33 @@
                             via comments, support forum or emails.
                     </h4>
 
+                </div>
+            </section>
+            
+            <!--FAQs-->
+            <section class="section faqs" id="faqs">
+                <div class="sec-title">
+                    <span class="icon fa fa-fqs"></span>
+                    <h2>FAQs</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>1. What is the default password ?</h3><br>
+                    <div style="padding-left: 18px;">
+                        <h4>
+                            Default password of student is student's date of birth i.e. ddmmyyyy. <br>
+                            <span style="font-size: 1.5rem;"> Note :- student's credentails will be sent to their respective parent's email.</span>
+                        </h4><br>
+                        <h4>
+                            Default password of parent is parent's date of birth i.e. ddmmyyyy. <br>
+                            <span style="font-size: 1.5rem;"> Note :- parent's credentails will be sent to their respective email.</span>
+                        </h4><br>
+                        <h4>
+                            Default password of teacher is teacher's date of birth i.e. ddmmyyyy. <br>
+                            <span style="font-size: 1.5rem;"> Note :- teacher's credentails will be sent to their respective email.</span>
+                        </h4><br>
+                    </div>
                 </div>
             </section>
 
