updated rate us link

--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
                         Thank you very much for choosing our product.
                         It's our pleasure to serve top-notch service to you.
                         Please give us your honest feedback that will help us to make a more strong and reliable product
-                        by click here <a href="https://codecanyon.net/item/elite-quiz-the-flutter-quiz-app/33570423"
-                            style="color:#3c55d1" target="_blank">Rate Us</a>.
+                        by click here <a href="https://codecanyon.net/downloads" style="color:#3c55d1"
+                            target="_blank">Rate Us</a>.
                         Thank you very much.
                     </h4>
 
