--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
                 </div>
             </section>
-            
+
             <!--FAQs-->
             <section class="section faqs" id="faqs">
                 <div class="sec-title">
@@ -626,15 +626,18 @@
                     <div style="padding-left: 18px;">
                         <h4>
                             Default password of student is student's date of birth i.e. ddmmyyyy. <br>
-                            <span style="font-size: 1.5rem;"> Note :- student's credentails will be sent to their respective parent's email.</span>
+                            <span style="font-size: 1.5rem;"> Note :- student's credentails will be sent to their
+                                respective parent's email.</span>
                         </h4><br>
                         <h4>
                             Default password of parent is parent's date of birth i.e. ddmmyyyy. <br>
-                            <span style="font-size: 1.5rem;"> Note :- parent's credentails will be sent to their respective email.</span>
+                            <span style="font-size: 1.5rem;"> Note :- parent's credentails will be sent to their
+                                respective email.</span>
                         </h4><br>
                         <h4>
                             Default password of teacher is teacher's date of birth i.e. ddmmyyyy. <br>
-                            <span style="font-size: 1.5rem;"> Note :- teacher's credentails will be sent to their respective email.</span>
+                            <span style="font-size: 1.5rem;"> Note :- teacher's credentails will be sent to their
+                                respective email.</span>
                         </h4><br>
                     </div>
                 </div>
