Add: Link & Copyright year - Copyright Year updated to 2023 - Tap to open links added on generate release version urls

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </nav>
             </div>
 
-            <div class="copyright">Copyright &copy; <a href="mailto:support@wrteam.in">WRTeam</a> 2022</div>
+            <div class="copyright">Copyright &copy; <a href="mailto:support@wrteam.in">WRTeam</a> 2023</div>
         </aside>
 
         <div id="content-section">
@@ -574,11 +574,15 @@
                         <li>
 
                             <h4>To generate release android app-bundle and publish to playstore follow
-                                https://flutter.dev/docs/deployment/android</h4>
+                                <a href="https://flutter.dev/docs/deployment/android"
+                                    target="_blank">https://flutter.dev/docs/deployment/android</a>
+                            </h4>
                         </li>
                         <li>
                             <h4>To generate release ios apk and publish to appstore follow
-                                https://flutter.dev/docs/deployment/ios</h4>
+                                <a href="https://flutter.dev/docs/deployment/ios"
+                                    target="_blank">https://flutter.dev/docs/deployment/ios</a>
+                            </h4>
                         </li>
                     </ol>
                 </div>
