--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
 
                             </ul>
                         </li>
+
+                        <!-- TODO add Features as you go REMOVE THIS AT THE END -->
+                        <!-- Application and Panel Feature List -->
+                        <li class='sub-menu'><a>Features<i class='fa fa-caret-down right'></i></a>
+                            <ul>
+                                <li><a href='#feature-academics'>Academics</a></li>
+                                <li><a href='#feature-student-admissions'>Student Admissions</a></li>
+                                <li><a href='#feature-teachers-and-classes'>Teachers and Classes</a></li>
+                                <li><a href='#feature-timetable'>Timetable</a></li>
+                                <li><a href='#feature-holidays'>Holidays</a></li>
+                                <li><a href='#feature-sliders'>Sliders</a></li>
+                                <li><a href='#feature-announcements'>Announcements</a></li>
+                                <li><a href='#feature-attendence'>Attendance</a></li>
+                                <li><a href='#feature-lessons-and-topics'>Lessons and Topics</a></li>
+                                <li><a href='#feature-online-and-offline-exams'>Online and Offline Exams</a></li>
+                                <li><a href='#feature-assignments'>Assignments</a></li>
+                                <li><a href='#feature-fees-payment'>Fees Payment</a></li>
+                            </ul>
+                        </li>
+
                         <li>
                             <a href="#support">Support <span class="fa fa-arrow-right"></span></a>
                         </li>
@@ -368,27 +388,6 @@
 
 
 
-
-
-
-
-
-            <!--Support-->
-            <!-- <section class="section support" id="support">
-                <div class="sec-title">
-                    <span class="icon fa fa-support"></span>
-                    <h2>Support</h2>
-                </div>
-
-
-                <div class="sec-content">
-                    <ol>
-                    </ol>
-                    <br />
-                </div>
-            </section> -->
-
-
             <!-- Change package name of this app flutter  -->
             <section class="section css-structure" id="integrateWithAdminPanel">
                 <div class="sec-title">
@@ -589,6 +588,179 @@
             </section>
 
 
+            <!-- Setup flutter  -->
+            <section class="section css-structure" id="setupFlutter">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Setup flutter</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>
+                        Setup flutter in your system
+                    </h3>
+                    <ol>
+                        Visit flutter official website : <a
+                            href="https://docs.flutter.dev/get-started/install">https://docs.flutter.dev/get-started/install</a>
+
+                        for full install guide.
+                        <br>
+                        <br>
+                        If you prefer video tutorials, we recommend this playlist for the full installation process <br>
+                        <a
+                            href="https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm">https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm</a>
+                    </ol>
+                    <br />
+                </div>
+            </section>
+
+
+            <!-- Features -->
+            <section class="section css-structure" id="feature-academics">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Academics</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Academics FEATURE EXPLAINATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-student-admissions">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Student Admissions</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Student Admissions FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-teachers-and-classes">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Teachers and Classes</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Teachers and Classes FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-timetable">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Timetable</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Timetable FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-holidays">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Holidays</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Holidays FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-sliders">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Sliders</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Sliders FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-announcements">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Announcements</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Announcements FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-attendance">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Attendance</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Attendance FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-lessons-and-topics">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Lessons and Topics</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Lessons and Topics FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-online-and-offline-exams">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Online and Offline Exams</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Online and Offline Exams FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-assignments">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Assignments</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Assignments FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
+            <section class="section css-structure" id="feature-fees-payment">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Fees Payment</h2>
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <h3>TODO ADD Fees Payment FEATURE EXPLANATION</h3>
+                    <br />
+                </div>
+            </section>
 
 
 
