Added: Generated data

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <li class='sub-menu'><a>Features<i class='fa fa-caret-down right'></i></a>
                             <ul>
                                 <li><a href='#feature-academics'>Academics</a></li>
-                                <li><a href='#feature-student-admissions'>Student Admissions</a></li>
-                                <li><a href='#feature-teachers-and-classes'>Teachers and Classes</a></li>
+                                <li><a href='#feature-student'>Students</a></li>
+                                <li><a href='#feature-teachers'>Teachers</a></li>
                                 <li><a href='#feature-timetable'>Timetable</a></li>
                                 <li><a href='#feature-holidays'>Holidays</a></li>
                                 <li><a href='#feature-sliders'>Sliders</a></li>
@@ -130,9 +130,11 @@
 
                     <br />
                     <p>
-                        Thank you for purchasing.<strong>e-School</strong> - Follow this documentation to setup admin
-                        panel and mobile application. <br />
-                        Thank you so much!
+                        Thank you for purchasing <strong>e-School</strong>.
+                        We appreciate your support. In this documentation, you will find instructions on how to set up
+                        the admin panel and mobile application for e-School.
+                        This document also provides features of e-School.
+                        If you have any questions, feel free to reach out. Thank you for choosing e-School!
                     </p>
                     <br />
                 </div>
@@ -588,34 +590,6 @@
             </section>
 
 
-            <!-- Setup flutter  -->
-            <section class="section css-structure" id="setupFlutter">
-                <div class="sec-title">
-                    <span class="icon fa fa-at"></span>
-                    <h2>Setup flutter</h2>
-                </div>
-
-                <br />
-                <div class="sec-content">
-                    <h3>
-                        Setup flutter in your system
-                    </h3>
-                    <ol>
-                        Visit flutter official website : <a
-                            href="https://docs.flutter.dev/get-started/install">https://docs.flutter.dev/get-started/install</a>
-
-                        for full install guide.
-                        <br>
-                        <br>
-                        If you prefer video tutorials, we recommend this playlist for the full installation process <br>
-                        <a
-                            href="https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm">https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm</a>
-                    </ol>
-                    <br />
-                </div>
-            </section>
-
-
             <!-- Features -->
             <section class="section css-structure" id="feature-academics">
                 <div class="sec-title">
@@ -625,32 +599,165 @@
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Academics FEATURE EXPLAINATION</h3>
+                    <h3>Mediums and Sections</h3>
+                    <p>
+                        The Academics feature in e-School allows the admin to define the mediums (languages) in which
+                        the school operates, such as English, Hindi, and Gujarati. Additionally, the admin can create
+                        sections for classes, such as A, B, C, and so on.
+                    </p>
+                    <br>
+                    <h3>Subjects</h3>
+                    <p>
+                        The admin can create new subjects within e-School. Each subject can be associated with one of
+                        the mediums and has a name, type (theory or practical), optional subject code, custom background
+                        color, and image to be displayed in the application. This allows for easy organization and
+                        identification of subjects across different classes.
+                    </p>
+                    <h3>Class</h3>
+                    <p>
+                        In e-School, the admin can add classes by choosing the mediums and sections that each class will
+                        have. For example, selecting English as the medium and A, B, C as the sections will
+                        automatically create classes like 10 A English, 10 B English, and 10 C English. Similarly,
+                        selecting Gujarati as the medium and A, B, C as the sections will create classes like 10 A
+                        Gujarati, 10 B Gujarati, and 10 C Gujarati.
+                    </p>
+                    <br>
+                    <h3>Class Assign Subject</h3>
+                    <p>
+                        Each class can have one or more core and elective subjects assigned to it. The admin can assign
+                        subjects to specific classes based on the curriculum requirements. This ensures that students in
+                        each class have access to the appropriate subjects for their academic journey.
+                    </p>
+                    <br>
+                    <h3>Assign Class Teacher</h3>
+                    <p>
+                        Teachers can be assigned as class teachers for one or more classes. The class teacher plays a
+                        crucial role in overseeing the overall academic progress and discipline of the students in a
+                        particular class. This feature allows for effective communication and coordination between the
+                        class teacher, students, and parents/guardians.
+                    </p>
+                    <br>
+                    <h3>Assign Subject Teacher</h3>
+                    <p>
+                        Teachers are chosen to teach different subjects based on their expertise and qualifications. The
+                        admin can assign subject teachers to specific subjects across different classes. This ensures
+                        that students receive instruction from teachers who specialize in the respective subjects,
+                        enhancing the quality of education.
+                    </p>
+                    <br>
+                    <h3>Assign New Student Class</h3>
+                    <p>
+                        The admin can use the "Assign New Student Class" feature to assign a
+                        new student to a specific class and class section. This feature allows for easy management of
+                        student enrollment and ensures that each student is allocated to the appropriate class and
+                        section within the school.
+                    </p>
+                    <br>
+                    <h3>Promote Student</h3>
+                    <p>
+                        The promote student feature allows for the seamless promotion of students from one class to
+                        another at the end of the academic year. This simplifies the administrative process and ensures
+                        that students progress to the appropriate next level in their education.
+                    </p>
+
                     <br />
                 </div>
             </section>
-            <section class="section css-structure" id="feature-student-admissions">
+            <section class="section css-structure" id="feature-student">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
-                    <h2>Student Admissions</h2>
+                    <h2>Student</h2>
                 </div>
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Student Admissions FEATURE EXPLANATION</h3>
-                    <br />
+                    <h3>Student Admission</h3>
+                    <p>
+                        The Student Admission section in the e-School web panel allows administrators to add new
+                        students. They can provide details such as the student's first and last name, gender, profile
+                        image upload, class and category selection, caste, religion, blood group, height, current and
+                        permanent addresses. Additionally, administrators can add information about the student's mother
+                        and father, including their first names, last names, mobile number, profile image, email
+                        addresses, dates of
+                        birth,
+                        occupations, and genders. An optional guardian can also be added, including similar details.
+                    </p>
+                    <br>
+                    <h3>Parents Management</h3>
+                    <p>
+                        The Parents Management section in the e-School web panel provides administrators with the
+                        ability to view and modify the data of all parents associated with the students from the school.
+                        This tab serves as a central hub for managing parent information, ensuring effective
+                        communication and accurate records.
+                    </p>
+
+                    <br>
+                    <h3>Student Roll Number Assignment</h3>
+                    <p>
+                        The Student Roll Number Assignment feature enables administrators to assign custom roll numbers
+                        to students in any class. This functionality simplifies the management and organization of
+                        student records within the e-School system.
+                    </p>
+                    <br>
+                    <h3>Student Details Management</h3>
+                    <p>
+                        The Student Details Management section allows administrators to view, edit, or delete student
+                        information. This page provides convenient access to student records for necessary updates or
+                        modifications.
+                    </p>
+                    <br>
+                    <h3>Student Category Management</h3>
+                    <p>
+                        The Student Category Management feature allows administrators to manage student categories
+                        within the e-School system. This includes creating categories such as general, OBC, ST, SC, or
+                        any other relevant categories, and assigning them to students as needed.
+                    </p>
+                    <br>
+                    <h3>Reset Password</h3>
+                    <p>
+                        The Reset Password feature enables administrators to reset a student's login password for the
+                        e-School application. By using the student's unique GR number, administrators can modify the
+                        login password, which is required for the student to access the e-School application. The
+                        default username is the GR number, and the default password is the student's date of birth.
+                    </p>
+                    <br>
+                    <h3>Add Bulk Student Data</h3>
+                    <p>
+                        The Add Bulk Student Data feature allows administrators to add a large number of students by
+                        uploading a CSV file in a specific format. Administrators can download a dummy file with the
+                        required format using the "Download Dummy File" button. This functionality streamlines the
+                        process of importing student data into the e-School system.
+                    </p>
+
                 </div>
             </section>
-            <section class="section css-structure" id="feature-teachers-and-classes">
+            <section class="section css-structure" id="feature-teachers">
                 <div class="sec-title">
                     <span class="icon fa fa-at"></span>
-                    <h2>Teachers and Classes</h2>
+                    <h2>Teachers</h2>
                 </div>
 
                 <br />
                 <div class="sec-content">
-                    <h3>TODO ADD Teachers and Classes FEATURE EXPLANATION</h3>
-                    <br />
+                    <p>
+                        The Teachers screen in the e-School web panel allows administrators to manage teachers within
+                        the school. From this screen, administrators can create new teachers by filling in details such
+                        as first name, last name, gender, email, mobile number, optional profile image, date of birth,
+                        qualification, current address, and permanent address. Additionally, administrators have the
+                        option to grant teachers permission to manage student and parent data, enabling them to perform
+                        these tasks from their own panel or <a target="_blank"
+                            herf="https://codecanyon.net/item/teacher-flutter-app-eschool-virtual-school-management-system/39159458?s_rank=4">app</a>.
+                    </p>
+                    <p>
+                        Once a new teacher is created, they can log in using the web panel with their email and password
+                        (with the default password being their date of birth). Alternatively, teachers can also log in
+                        using the <a target="_blank"
+                            href="https://codecanyon.net/item/teacher-flutter-app-eschool-virtual-school-management-system/39159458?s_rank=4">teacher
+                            app</a>, which provides access to teacher-specific features based on their
+                        permissions and assigned classes. Class teachers may have additional actions available to them,
+                        such as taking attendance for their assigned students.
+                    </p>
+
                 </div>
             </section>
             <section class="section css-structure" id="feature-timetable">
