Modifications - PHP version requirement changed to "upto version 8.1.0" - Copyright year changed to "2023" - Tapable urls added in release version building reference for app configuration - Package name change in Constants.dart file step removed as it was unnecessory

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </nav>
             </div>
 
-            <div class="copyright">Copyright &copy; <a href="mailto:support@wrteam.in">WRTeam</a> 2022</div>
+            <div class="copyright">Copyright &copy; <a href="mailto:support@wrteam.in">WRTeam</a> 2023</div>
         </aside>
 
         <div id="content-section">
@@ -110,7 +110,7 @@
 
                     <br />
                     <p>
-                        Thank you for purchasing.<strong>e-School</strong> - Follow this documentation to setup admin
+                        Thank you for purchasing <strong>e-School</strong> - Follow this documentation to setup admin
                         panel and mobile application. <br />
                         Thank you so much!
                     </p>
@@ -130,7 +130,7 @@
                     <h3 class="content-title">Prerequisite</h3>
                     <h3>
                         Eschool Admin panel is built using <strong>Laravel Framework 9.14.1</strong> so you need
-                        <strong>PHP 8.1.0 or higher</strong> version installed on your server.
+                        <strong>PHP version upto 8.1.0</strong> version installed on your server.
                     </h3>
 
                     <h3 class="content-title">Upload Admin Panel code on server</h3>
@@ -293,10 +293,10 @@
                             <br>
                             <img src="images/app/changePackageName1.png" alt="e-School">
                         </li>
-                        <li>
+                        <!-- <li>
                             Go to lib/utils/constants.dart and update package.
                             <img src="images/app/changePackageName2.png" alt="e-School">
-                        </li>
+                        </li> -->
                     </ol>
                     <br />
                 </div>
@@ -574,11 +574,15 @@
                         <li>
 
                             <h4>To generate release android app-bundle and publish to playstore follow
-                                https://flutter.dev/docs/deployment/android</h4>
+                                <a href="https://flutter.dev/docs/deployment/android"
+                                    target="_blank">https://flutter.dev/docs/deployment/android</a>
+                            </h4>
                         </li>
                         <li>
                             <h4>To generate release ios apk and publish to appstore follow
-                                https://flutter.dev/docs/deployment/ios</h4>
+                                <a href="https://flutter.dev/docs/deployment/ios"
+                                    target="_blank">https://flutter.dev/docs/deployment/ios</a>
+                            </h4>
                         </li>
                     </ol>
                 </div>
